--- a/specials-details.html
+++ b/specials-details.html
@@ -54,8 +54,8 @@
                     <ul class="nav-links">
                         <li class="has-mega"><a href="javascript:void(0)" class="mega-trigger"
                                 data-target="#nebu-inv">Inventory</a></li>
-                        <li><a href="#">Financing</a></li>
-                        <li><a href="#">Docks & Lifts</a></li>
+                        <li><a href="financing.html">Financing</a></li>
+                        <li><a href="docks.html">Docks & Lifts</a></li>
                         <li class="has-mega"><a href="javascript:void(0)" class="mega-trigger"
                                 data-target="#menu-service">Service</a></li>
                     </ul>
@@ -88,8 +88,8 @@
                             <li><a href="#">New Boats</a></li>
                             <li><a href="#">Pre-Owned Boats</a></li>
                             <li><a href="#">Factory Promotions</a></li>
-                            <li class="mt-4"><a href="#">Get Your Trade Value</a></li>
-                            <li><a href="#">Get Financing</a></li>
+                            <li class="mt-4"><a href="trade.html">Get Your Trade Value</a></li>
+                            <li><a href="financing.html">Get Financing</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-7">
@@ -191,10 +191,10 @@
 
                 <!-- Static Links -->
                 <div class="mobile-nav-item border-bottom">
-                    <a href="#" class="d-block py-3 text-teal font-weight-bold">FINANCING</a>
+                    <a href="financing.html" class="d-block py-3 text-teal font-weight-bold">FINANCING</a>
                 </div>
                 <div class="mobile-nav-item border-bottom">
-                    <a href="#" class="d-block py-3 text-teal font-weight-bold">DOCKS & LIFTS</a>
+                    <a href="docks.html" class="d-block py-3 text-teal font-weight-bold">DOCKS & LIFTS</a>
                 </div>
 
                 <!-- Service Accordion -->
@@ -204,9 +204,9 @@
                     </div>
                     <div id="mobile-service" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
-                            <li class="py-2"><a href="#" class="text-teal">Service Center</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Storage</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Parts</a></li>
+                            <li class="py-2"><a href="service.html" class="text-teal">Service Center</a></li>
+                            <li class="py-2"><a href="storage.html" class="text-teal">Storage</a></li>
+                            <li class="py-2"><a href="parts.html" class="text-teal">Parts</a></li>
                         </ul>
                     </div>
                 </div>
@@ -218,12 +218,12 @@
                     </div>
                     <div id="mobile-company" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
-                            <li class="py-2"><a href="#" class="text-teal">About Us</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Mission Statement</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Gold Star Membership</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Events & Promos</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">News & Articles</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Meet Our Crew</a></li>
+                            <li class="py-2"><a href="about.html" class="text-teal">About Us</a></li>
+                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a></li>
+                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star Membership</a></li>
+                            <li class="py-2"><a href="events-promos.html" class="text-teal">Events & Promos</a></li>
+                            <li class="py-2"><a href="news-articles.html" class="text-teal">News & Articles</a></li>
+                            <li class="py-2"><a href="meet-our-crew.html" class="text-teal">Meet Our Crew</a></li>
                         </ul>
                     </div>
                 </div>
@@ -251,16 +251,16 @@
         </div>
         <div class="sidebar-content">
             <ul class="main-sidebar-nav">
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">MISSION STATEMENT</a></li>
-                <li><a href="#">GOLD STAR MEMBERSHIP</a></li>
-                <li><a href="#">EVENTS & PROMOS</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="mission-statement.html">MISSION STATEMENT</a></li>
+                <li><a href="gold-star-membership.html">GOLD STAR MEMBERSHIP</a></li>
+                <li><a href="events-promos.html">EVENTS & PROMOS</a></li>
             </ul>
             <ul class="sub-sidebar-nav secondary-nav">
-                <li><a href="#">News & Articles</a></li>
-                <li><a href="#">Meet Our Crew</a></li>
-                <li><a href="#">Employment</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="news-articles.html">News & Articles</a></li>
+                <li><a href="meet-our-crew.html">Meet Our Crew</a></li>
+                <li><a href="employment.html">Employment</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <div class="sidebar-socials">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
